--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 	<script type="text/javascript" src="js/browserCheck.min.js"></script>
 
-<link rel="shortcut icon" href="">
+<link rel="shortcut icon" href="images\18.jpg">
 <meta itemprop="name" content="The Another World.|生电服">
 
 	<meta content="always" name="referrer">
