--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
                 <h2 class="jion" style="color: Black">加入我们!!!</h2>
             </header>
             <div class="buttons">
-                <button>来就来</button>
+                <a href="https://jq.qq.com/?_wv=1027&k=sPZizHKa " target="_blank" style="border-bottom:0px"><button>来就来</button></a>
             </div>
             <!-- <form method="post" action="#">
                 <div class="row gtr-uniform">
@@ -170,7 +170,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
         </div> -->
         <footer>
             <ul class="icons">
-                <li><a href="https://github.com/xiaowine" class="icon brands alt fa-github"><span class="label">Twitter</span></a></li>
+                <li><a href="https://github.com/xiaowine" target="_blank" class="icon brands alt fa-github"><span class="label">Twitter</span></a></li>
                 <li><a href="http://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&email=lOz99fu54-368dTl5br3_-k" target="_blank" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
             </ul>
             <ul class="copyright">
