--- a/index.html
+++ b/index.html
@@ -9,7 +9,21 @@
     <link rel="shortcut icon" href="images/icon.ico">
 </head>
 
+
 <body class="is-preload">
+
+
+    <!-- weather -->
+    <div id="he-plugin-simple"></div>
+    <script>
+        WIDGET = {
+            CONFIG: {
+                "borderRadius": 7,
+                "key": "3cfcdfd09b32461592d4fb1201a8ef3c"
+            }
+        }
+    </script>
+    <script src="https://widget.qweather.net/simple/static/js/he-simple-common.js?v=2.0"></script>
 
     <!-- Header -->
     <section id="header">
@@ -149,11 +163,9 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
     <!-- Footer -->
     <section id="footer">
         <div class="container">
-            <header class="major">
-                <h2 class="jion" style="color: Black">加入我们!!!</h2>
-            </header>
             <div class="buttons">
-                <a href="https://jq.qq.com/?_wv=1027&k=sPZizHKa " target="_blank" style="border-bottom:0px"><button>来就来</button></a>
+                <iframe src="http://127.0.0.1:8080/" frameborder="0"></iframe>
+                <a href="https://jq.qq.com/?_wv=1027&k=sPZizHKa " target="_blank" style="border-bottom:0px"><button>加入我们!!!</button></a>
             </div>
             <!-- <form method="post" action="#">
                 <div class="row gtr-uniform">
@@ -167,7 +179,10 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
                     </div>
                 </div>
             </form> -->
-        </div> -->
+
+
+
+        </div>
         <footer>
             <ul class="icons">
                 <li><a href="https://github.com/xiaowine" target="_blank" class="icon brands alt fa-github"><span class="label">Twitter</span></a></li>
@@ -179,6 +194,32 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
             </ul>
         </footer>
     </section>
+
+    <!-- Cube -->
+    <div class="monfang">
+        <div class="cube">
+            <div class="front">
+                <a href="javascript:;">红石</a>
+            </div>
+            <div class="back">
+                <a href="javascript:;">建筑</a>
+            </div>
+            <div class="right">
+                <a href="javascript:;">摸鱼</a>
+            </div>
+            <div class="left">
+                <a href="javascript:;">原版</a>
+            </div>
+            <div class="top">
+                <a href="javascript:;">加入我们</a>
+            </div>
+            <div class="bottom">
+                <a href="javascript:;">加入我们</a>
+            </div>
+        </div>
+    </div>
+
+
 
     <!-- Scripts -->
     <script src="assets/js/jquery.min.js"></script>
