--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
         </div>
         <footer>
             <ul class="icons">
-                <li><a href="https://github.com/xiaowine" target="_blank" class="icon brands alt fa-github"><span class="label">Twitter</span></a></li>
+                /*<li><a href="https://github.com/xiaowine" target="_blank" class="icon brands alt fa-github"><span class="label">Twitter</span></a></li>*/
                 <li><a href="http://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&email=lOz99fu54-368dTl5br3_-k" target="_blank" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
             </ul>
             <ul class="copyright">
