--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
     <section id="footer">
         <div class="container">
             <div class="buttons">
-                <iframe src="http://152.136.96.233:8080/" frameborder="0"></iframe>
+                <!-- <iframe src="http://152.136.96.233:8080/" frameborder="0"></iframe> -->
                 <a href="https://jq.qq.com/?_wv=1027&k=sPZizHKa " target="_blank" style="border-bottom:0px"><button>加入我们!!!</button></a>
             </div>
             <!-- <form method="post" action="#">
@@ -185,7 +185,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
         </div>
         <footer>
             <ul class="icons">
-                /*<li><a href="https://github.com/xiaowine" target="_blank" class="icon brands alt fa-github"><span class="label">Twitter</span></a></li>*/
+                <li><a href="https://github.com/xiaowine" target="_blank" class="icon brands alt fa-github"><span class="label">Twitter</span></a></li>
                 <li><a href="http://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&email=lOz99fu54-368dTl5br3_-k" target="_blank" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
             </ul>
             <ul class="copyright">
