--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
     <section id="footer">
         <div class="container">
             <div class="buttons">
-                <!-- <iframe src="http://152.136.96.233:8080/" frameborder="0"></iframe> -->
+                <iframe src="http://152.136.96.233:8080/" frameborder="0"></iframe>
                 <a href="https://jq.qq.com/?_wv=1027&k=sPZizHKa " target="_blank" style="border-bottom:0px"><button>加入我们!!!</button></a>
             </div>
             <!-- <form method="post" action="#">
